# happenings

./: .gitignore  Cargo.toml  Dockerfile  deploy-debug.sh  deploy-release.sh  deploy.sh  index.html  tmp.txt
app/: Cargo.toml
app/src/: error_template.rs  lib.rs  model.rs  square_api.rs
app/src/components/: mod.rs
app/src/components/controls/: checkbox.rs  mod.rs  ticket.rs  ticket_type.rs
app/src/pages/: booking_summary.rs  email_booking.rs  list_bookings.rs  mod.rs  new_booking.rs
app/src/server_fns/: create_payment_link.rs  email_booking.rs  list_bookings.rs  mod.rs
backend/: Cargo.toml
backend/src/: fileserv.rs  main.rs
frontend/: Cargo.toml
frontend/src/: lib.rs
square_api/: Cargo.toml
src/: app.rs  error_template.rs  fileserv.rs  lib.rs  main.rs  model.rs  reactive_list.rs
src/components/: email_field.rs  icon_button.rs  mod.rs  modal.rs  name_field.rs  ticket_type.rs
src/components/controls/: name.rs  ticket.rs  ticket_type.rs
toy/: Cargo.toml
toy/src/: main-listbooking.rs  main.rs  main2.rs
