[package]
 name = "happenings"
 version = "0.1.0"
 edition = "2021"

 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
 leptos_icons = { version = "0.1.0", features = [
  "FaEnvelopeSolid",
  "FaTriangleExclamationSolid",
  "FaCheckSolid",
  "FaPlusSolid",
  "FaTrashSolid",
 ] }
 console_error_panic_hook = "0.1.7"
 email_address = "0.2.4"
 leptos = { version = "0.5.2", features = ["csr", "nightly"] }
 rust_decimal = "1.33.0"
 rust_decimal_macros = "1.33.0"
 uuid = { version = "1.5.0", features = ["v4", "js"] }
indexmap = "2.1.0"
 # ordered_hash_map = "0.4.0"
 #  ordered-map = "0.4.2"
