[workspace]
 members = ["app", "frontend", "backend"]
 resolver = "2"

 # [package]
 #  name = "happenings"
 #  version = "0.1.0"
 #  edition = "2021"

 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 # [lib]
 #  crate-type = ["cdylib", "rlib"]

 [workspace.dependencies]
  axum = "0.6.20"
  console_error_panic_hook = "0.1.7"
  console_log = "1.0.0"
  cfg-if = "1.0.0"
  http = "0.2.11"
  leptos = { version = "0.5.2", features = ["nightly"] }
  leptos_meta = { version = "0.5.2", features = ["nightly"] }
  leptos_axum = "0.5.2"
  leptos_router = { version = "0.5.2", features = ["nightly"] }
  log = "0.4.20"
  simple_logger = "4.1.0"
  thiserror = "1.0.50"
  tokio = "1.34.0"
  tower = "0.4.13"
  tower-http = { version = "0.4.4", features = ["fs"] }
  wasm-bindgen = "0.2.88"
  pretty_env_logger = "0.5.0"
  # ordered_hash_map = "0.4.0"
  #  ordered-map = "0.4.2"


 [[workspace.metadata.leptos]]
  name = "happenings"
  bin-package = "backend"
  lib-package = "frontend"
  site-root = "target/site"
  site-pkg-dir = "pkg"
  style-file = "style/bulma.css"
  assets-dir = "public"
  site-addr = "127.0.0.1:3000"
  reload-port = 3001

  #
  #  # The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
  #  # output-name = "{{project-name}}"

  #  # The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
  #  site-root = "target/site"

  #  # The site-root relative folder where all compiled output (JS, WASM and CSS) is written
  #  # Defaults to pkg
  #  site-pkg-dir = "pkg"

  #  # [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
  #  # style-file = "style/main.scss"
  #  style-file = "style/bulma.css"

  #  # Assets source dir. All files found here will be copied and synchronized to site-root.
  #  # The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
  #  #
  #  # Optional. Env: LEPTOS_ASSETS_DIR.
  #  # assets-dir = "public"

  #  # The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
  #  site-addr = "127.0.0.1:3000"

  #  # The port to use for automatic reload monitoring
  #  reload-port = 3001

  #  # [Optional] Command to use when running end2end tests. It will run in the end2end dir.
  #  #   [Windows] for non-WSL use "npx.cmd playwright test"
  #  #   This binary name can be checked in Powershell with Get-Command npx
  #  end2end-cmd = "npx playwright test"
  #  end2end-dir = "end2end"

  #  #  The browserlist query used for optimizing the CSS.
  #  browserquery = "defaults"

  #  # Set by cargo-leptos watch when building with that tool. Controls whether autoreload JS will be included in the head
  #  watch = false

  #  # The environment Leptos will run in, usually either "DEV" or "PROD"
  #  env = "DEV"

  #  # The features to use when compiling the bin target
  #  #
  #  # Optional. Can be over-ridden with the command line parameter --bin-features
  #  # bin-features = ["ssr"]

  #  # If the --no-default-features flag should be used when compiling the bin target
  #  #
  #  # Optional. Defaults to false.
  #  bin-default-features = false

  #  # The features to use when compiling the lib target
  #  #
  #  # Optional. Can be over-ridden with the command line parameter --lib-features
  #  # lib-features = ["hydrate"]

  #  # If the --no-default-features flag should be used when compiling the lib target
  #  #
  #  # Optional. Defaults to false.
  #  lib-default-features = false

  #  # The profile to use for the lib target when compiling for release
  #  #
  #  # Optional. Defaults to "release".
  #  lib-profile-release = "wasm-release"
