[package]
 name = "app"
 version = "0.1.0"
 edition = "2021"

 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
 square_api = { version = "0.1.0", path = "../../sw/square_api", optional = true }
 uuid = { version = "1.5.0", features = ["v4", "js"] }
 email_address = "0.2.4"
 reqwest = { version = "0.11.22", features = ["json"] }
 rust_decimal = "1.33.0"
 rust_decimal_macros = "1.33.0"
 indexmap = "2.1.0"
 leptos_icons = { version = "0.1.0", features = [
  "FaEnvelopeSolid",
  "FaTriangleExclamationSolid",
  "FaCheckSolid",
  "FaPlusSolid",
  "FaTrashSolid",
  "FaUserSolid",
  "FaPhoneSolid",
 ] }
 leptos.workspace = true
 leptos_meta.workspace = true
 leptos_router.workspace = true
 leptos_axum = { workspace = true, optional = true }

 http.workspace = true
 cfg-if.workspace = true
 thiserror.workspace = true
 serde = "1.0.193"
 sanitizer = "0.1.6"
 log.workspace = true
 validator = { version = "0.16.1", features = ["derive", "phone"] }
 phonenumber = "0.3.3"


[features]
 ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:leptos_axum",
  "dep:square_api",
 ]
 default = []
 hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
