[package]
 name = "backend"
 version = "0.1.0"
 edition = "2021"

 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
 app = { path = "../app", default-features = false, features = ["ssr"] }
 leptos = { workspace = true, features = ["ssr"] }
 leptos_axum.workspace = true
 pretty_env_logger.workspace = true

 axum.workspace = true
 simple_logger.workspace = true
 tokio.workspace = true
 tower.workspace = true
 tower-http.workspace = true
 log.workspace = true
 dotenv = "0.15.0"
 signal-hook = "0.3.17"
 nix = { version = "0.27.1", features = ["signal"] }
 async-signals = "0.4.0"
 futures-util = "0.3.29"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
